<resources>
    <string name="app_name">SimpleNotes</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="note_body_hint">Enter note text</string>
    <string name="note_title_hint">Enter note title</string>
    <string name="new_note_title">New Note</string>
    <string name="add_new_note">Add new note</string>
    <string name="ok_button">OK</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Logout from application</string>
    <string name="cancel_button">Cancel</string>
    <string name="logout_title">Logout</string>
    <string name="change_color_menu_title">Change color</string>
    <string name="delete_menu_title">Delete note</string>
    <string name="delete_title">Delete confirmation</string>
    <string name="delete_message">Do you really want to delete this note?</string>
</resources>